<resources>
    <string name="app_name">AnimalCare</string>
    <string name="registerBtn" translatable="false">Register</string>
    <string name="Password" translatable="false">Enter Password</string>
    <string name="PhoneNumber" translatable="false">Enter Phone Number</string>
    <string name="FullName" translatable="false">Enter Full Name</string>
    <string name="loginBtn" translatable="false">Login</string>
    <string name="signupTxt" translatable="false">Do not have Account? Signup</string>
    <string name="signInTxt" translatable="false">Already Have an Account? Signin</string>
    <string name="SearchVet" translatable="false">Search Vets</string>
    <string name="myHerd" translatable="false">My Herd</string>
    <string name="farm_records" translatable="false">Farm Records</string>
    <string name="Forum" translatable="false">Forum</string>
    <string name="topicNameTxt" translatable="false">Topic Name Appears Here</string>
    <string name="createForumPost" translatable="false">Create Forum Post</string>
    <string name="postMessage" translatable="false">Write Post Message here</string>
    <string name="like" translatable="false">Like</string>
    <string name="dislike" translatable="false">Dislike</string>
    <string name="comment" translatable="false">Comment</string>
    <string name="educationTxt" translatable="false">Education Qualification</string>
    <string name="visitationFee" translatable="false">KSH 100</string>
    <string name="maps_ApiKey" translatable="false">AIzaSyCZtMKFAHRUj0VO_wcXqPPZ_yBsODwsWYY</string>
    <string name="update" translatable="false">Update Profile</string>
    <string name="EditProfile" translatable="false">Edit Profile</string>
    <string name="request_visit" translatable="false">Invite Vet</string>
    <string name="receiverMessage" translatable="false">This is the meesage from the reciever</string>
    <string name="done_after" translatable="false">To be Done After Progess</string>
    <string name="searchVet" translatable="false">Search Vet</string>
    <string name="examplePhone" translatable="false">0712345678</string>
    <string name="mpesa_payment" translatable="false">Enter your Mpesa Pin on the prompt pop-up on your phone to complete the payment</string>
    <string name="procedure" translatable="false">Confirm the checkout Phone number then click Proceed to checkout</string>
    <string name="HealthRecord" translatable="false">Health Record</string>
    <string name="production" translatable="false">Milk Production</string>
    <string name="breedingFragment" translatable="false">Breeding</string>
    <string name="health" translatable="false">Health</string>
    <string name="visit_options" translatable="false">Choose Service that your need</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="Diagnosis" translatable="false">Diagnose</string>
    <string name="location_options" translatable="false">Choose location option</string>
    <string name="diagnose_title" translatable="false">Select Symptoms evident in the Animal</string>
    <string name="generalSymptomText" translatable="false">General Symptoms</string>
    <string name="gitSystem" translatable="false">Gastrointestinal Tract Symptom</string>
    <string name="nerveous" translatable="false">Nerveous System Symptoms</string>
    <string name="respiratory" translatable="false">Respiratory System Symptoms</string>
    <string name="skin" translatable="false">Skin Symptoms</string>
    <string name="circulatory" translatable="false">Circulatory System Symptoms</string>
    <string name="udder" translatable="false">Udder System Symptom</string>
    <string name="animalAdd" translatable="false">Add Animal to Herd</string>
    <string name="animalName" translatable="false">Animal Name</string>
    <string name="animalBreed" translatable="false">Choose Animal Breed</string>
    <string name="status" translatable="false">Choose Animal Status</string>
    <string name="addAnimal" translatable="false">Add Animal</string>
    <string name="animalGroup" translatable="false">Choose Animal Group</string>
    <string name="DOB" translatable="false">Pick Date of Birth</string>
    <string name="saveMilkProduction" translatable="false">Save</string>
    <string name="addMilk" translatable="false">Record Milk Production</string>
    <string name="dayOfMonth" translatable="false">Date</string>
    <string name="addTreatment" translatable="false">Record Treatment</string>
    <string name="addBreedingRecord" translatable="false">Add Breeding Record</string>
    <string name="breedType" translatable="false">Choose Breed Type</string>
    <string name="animalProfile" translatable="false">Animal Profile</string>
    <string name="diseaseAnimalText" translatable="false">Animal requiring intervention</string>
    <string name="animalChoose" translatable="false">Select Animal</string>
    <string name="totalMilkProduction" translatable="false">Total Milk Production</string>
    <string name="milkingTime" translatable="false">Choose Milking Time</string>
    <string name="ratingText" translatable="false">Please Rate The Service</string>
    <string name="ratingInstruction" translatable="false">Tap a star to give your rating</string>
    <string name="reviewComment" translatable="false">Leave a Comment (Optional)</string>
    <string name="review" translatable="false">Reviews</string>
    <string name="viewAllTxt" translatable="false"><u>View All</u></string>

    //string for spinner
    <string-array name="topic">
        <item>Select Topic ▼</item>
        <item>Veterinary Services</item>
        <item>Animal Health</item>
        <item>Animal Feeds</item>
        <item>Animal Record Keeping</item>
    </string-array>
    <string-array name="visitation_location_options">
        <item>Current Location</item>
        <item>Other Location</item>
    </string-array>
    <string-array name="service_options">
        <item>Artificial Insemination</item>
        <item>Disease Treatment</item>
    </string-array>
    <string-array name="general_symptom">
        <item>Loss of Consciousness</item>
        <item>Dullness</item>
        <item>Excess salivation</item>
        <item>Frothing of mouth</item>
        <item>Skin nodules</item>
        <item>Staggering while moving</item>
        <item>Reduced ability of the animal to mobilize</item>
        <item>laying down of the animal on its side and the whole body stiffens</item>
        <item>Decrease in milk Production in lactating animals</item>
        <item>Swollen Lymph Nodes</item>
        <item>Lameness</item>
        <item>Muscular Weakness</item>
        <item>Abortion</item>
        <item>Vomiting</item>
    </string-array>
    <string-array name="respiratory_symptoms">
        <item>Coughing</item>
        <item>Nasal Discharge</item>
        <item>Difficulty in Breathing</item>
    </string-array>
    <string-array name="circulatory_symptoms">
        <item>Fever</item>
        <item>Subnormal temperature</item>
        <item>Increased heart rate</item>
    </string-array>
    <string-array name="git_symptoms">
        <item>Loss of Apetite</item>
        <item>Urination,defecation, and milk secretion stops</item>
        <item>Diarrhea</item>
        <item>Weight Loss</item>
        <item>Weakness</item>
    </string-array>
    <string-array name="udder_symptoms">
        <item>Swollen Udder</item>
        <item>Blisters on teats</item>
        <item>Pain in the udder</item>
        <item>Milk Contains Pus</item>
        <item>Milk contains blood</item>
        <item>Milk turns watery</item>
        <item>Death of infected quarter</item>
        <item>Milk has a salty taste</item>
        <item>Pain in the udder.</item>
        <item>Redness of the udder</item>
        <item>Flakes or clots in milk</item>
    </string-array>
    <string-array name="skin_symptoms">
        <item>Sores and blisters on feet</item>
        <item>Production of tears from eyes</item>
        <item>White discoloration of the eyes and gums</item>
        <item>Watery Eyes</item>
        <item>Discharge of water from eyes and nose</item>
    </string-array>
    <string-array name="nerveous_symptoms">
        <item>Depression</item>
        <item>Quivering of lips</item>
    </string-array>
    <string-array name="age_group">
        <item>Above 18 months</item>
        <item>Below 18 months</item>
    </string-array>
    <string-array name="breed">
        <item>Freshian</item>
        <item>Ayrshire</item>
        <item>Guernsey</item>
        <item>Jersey</item>
    </string-array>
    <string-array name="animal_status">
        <item>Dry</item>
        <item>Lactating</item>
        <item>Pregnant</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="actions">
        <item>Add Health Record</item>
        <item>Add Milk Record</item>
        <item>Add Breeding Record</item>
    </string-array>
    <string-array name="milkFilterButtons">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>Total</item>
    </string-array>
    <string-array name="Actions">
        <item>Update Record</item>
        <item>Delete Record</item>
    </string-array>
    <string-array name="milkingTime">
        <item>Morning</item>
        <item>Noon</item>
        <item>Evening</item>
        <item>AllDay</item>
    </string-array>
</resources>
