<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FarmerRegistration">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/registrationLayout"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/FullName"
            android:id="@+id/fullNameEditTxt"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/PhoneNumber"
            android:id="@+id/phoneNumberEditTxt"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="phone"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/Password"
            android:id="@+id/passwordEditTxt"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceLarge" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerBtn"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:layout_marginVertical="20dp"
            android:id="@+id/registerBtn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInTxt"
            android:textSize="18sp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/signInTextView"
            android:textColor="@color/animalCareBackground"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>