<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FarmerLogin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/registrationLayout"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:id="@+id/phone_wrapper"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PhoneNumber"
                android:textSize="20sp"
                android:inputType="textPhonetic"
                android:padding="15dp"
                android:id="@+id/farmerPhoneEditTxt" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/farmerPassWordEditTxt" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:layout_marginVertical="20dp"
            android:id="@+id/farmerLoginBtn"
            android:layout_below="@+id/passwordEditTxt"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupTxt"
        android:textSize="18sp"
        android:layout_below="@+id/registrationLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:id="@+id/signUpTextView"
        android:textColor="@color/animalCareBackground"
        android:layout_marginVertical="10dp"/>

</RelativeLayout>