<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="32dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/animalAdd"
                    android:textAlignment="center"/>
                <ImageButton
                    android:id="@+id/animalImageUpload"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/camera_shape"
                    app:srcCompat="@drawable/ic_camera"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:layout_marginVertical="30dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextColor="#454545"
                    android:padding="8dp"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/animalName">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/animalNameTxt"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/animalGroup"
                    android:padding="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_marginVertical="10dp">
                    <AutoCompleteTextView
                        android:id="@+id/animalGroup"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
    <!--            <com.magiri.animalcare.UI.DropDown-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="10dp"-->
    <!--                style="@style/formDropDown"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:id="@+id/animalGroup"-->
    <!--                android:hint="@string/animalGroup"/>-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="#454545"
                    android:padding="8dp"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/DOB">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:cursorVisible="false"
                        android:id="@+id/dobText"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:textSize="20sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/animalBreed"
                    android:padding="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_marginVertical="10dp">
                    <AutoCompleteTextView
                        android:id="@+id/breedSpinner"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
    <!--            <com.magiri.animalcare.UI.DropDown-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="10dp"-->
    <!--                style="@style/formDropDown"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:id="@+id/breedSpinner"-->
    <!--                android:hint="@string/animalBreed"/>-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:visibility="gone"
                    android:id="@+id/statusLayout"
                    android:padding="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_marginVertical="10dp">
                    <AutoCompleteTextView
                        android:id="@+id/statusDropDown"
                        android:inputType="none"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
    <!--            <com.magiri.animalcare.UI.DropDown-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="10dp"-->
    <!--                style="@style/formDropDown"-->
    <!--                android:visibility="gone"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:id="@+id/statusDropDown"-->
    <!--                android:hint="@string/status"/>-->

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@null"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:layout_marginVertical="20dp"
                    android:text="@string/addAnimal"
                    android:id="@+id/addAnimalBtn"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>