<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:id="@+id/close_Dialog"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pay with Mpesa"
                android:textSize="100px"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:id="@+id/paymentTitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/paymentTitle"
                android:text="@string/procedure"
                android:padding="5dp"
                android:layout_marginVertical="5dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                android:id="@+id/directionTxt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/directionTxt"
                android:text="@string/mpesa_payment"
                android:padding="5dp"
                android:layout_marginVertical="5dp"
                android:lineSpacingMultiplier="1"
                android:textSize="16sp"
                android:id="@+id/mpesa_Text"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumberLayout"
                android:layout_below="@+id/mpesa_Text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/examplePhone">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_cancel"
                    android:textSize="18sp"
                    android:id="@+id/phoneNumberTxt"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/phoneNumberLayout"
                android:background="@drawable/button_background"
                android:text="Proceed"
                android:id="@+id/payBtn"
                android:textColor="@color/white"
                app:backgroundTint="@null"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>