<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/instructionTitle"
            android:background="@color/animalCareBackground"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_close_white"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:id="@+id/closeBtn"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/closeBtn"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ratingText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:paddingVertical="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ratingInstruction"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:paddingVertical="4dp"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructionTitle"
            android:orientation="vertical">
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_gravity="center"
                android:id="@+id/rating"
                android:progressTint="@color/animalCareBackground"
                android:layout_marginVertical="8dp"
                android:stepSize="1"
                android:clickable="true"
                android:focusable="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviewComment"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:textSize="16sp"
                android:padding="5dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="20dp"
                app:hintTextColor="#454545"
                app:boxStrokeColor="@color/text_input_stroke_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="Comment">
                <EditText
                    android:id="@+id/commentEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:background="@drawable/button_background"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/submitReviewBtn"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>